--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
+group = "org.eclipse.keyple.keypleless.reader.nfcmobile"
+title = Keyple Keypleless Reader NFC Mobile Kotlin Multiplatform Libr
+description = Kotlin Multiplatform NFC abstraction layer for Android and iOS
+version = 0.1.2
+
 kotlin.code.style=official
 
 #Gradle
