--- a/.github/workflows/kmp-publish.yml
+++ b/.github/workflows/kmp-publish.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   publish:
-    runs-on: macos-latest # for iOS targets
+    runs-on: macos-latest 
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -27,9 +27,9 @@ jobs:
         uses: gradle/actions/setup-gradle@v3
       - name: Build and Publish
         run: ./gradlew build test publish dokkaHtml --info
-      - name: Prepare Javadoc locally
+      - name: Prepare Dokka doc locally
         working-directory: .
-        run: ./.github/scripts/prepare_javadoc.sh
+        run: ./.github/scripts/prepare_dokkadoc.sh
       - name: Deploy Dokka to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
