docs: update project title and description

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 group = "org.eclipse.keyple.keypleless.reader.nfcmobile"
-title = Keyple Keypleless Reader NFC Mobile Kotlin Multiplatform Libr
-description = Kotlin Multiplatform NFC abstraction layer for Android and iOS
+title = Keyple Kotlin Multiplatform NFC Reader Library
+description = Keyple NFC Reader KMP Library - A Kotlin Multiplatform implementation enabling NFC card communications across Android, iOS and desktop platforms
 version = 0.1.2
 
 kotlin.code.style=official
