feat: add manual workflow dispatch with version input

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-group = "org.eclipse.keyple.keypleless.reader.nfcmobile"
+group = org.eclipse.keyple.keypleless.reader.nfcmobile
 title = Keyple Kotlin Multiplatform NFC Reader Library
 description = Keyple NFC Reader KMP Library - A Kotlin Multiplatform implementation enabling NFC card communications across Android, iOS and desktop platforms
 version = 0.1.2
