--- a/.github/workflows/kmp-release.yml
+++ b/.github/workflows/kmp-release.yml
@@ -3,6 +3,12 @@ name: Release KMP Library
 on:
   release:
     types: [ published ]
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to release (if not triggered by a tag)'
+        required: false
+        type: string
 
 jobs:
   release:
@@ -13,25 +19,77 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+
       - name: Write gradle.properties
         run: |
           mkdir -p ~/.gradle
           echo "${{ secrets.GRADLE_PROPERTIES }}" | base64 -d > ~/.gradle/gradle.properties
+
       - name: Update permissions
         working-directory: .
         run: chmod +x ./gradlew ./.github/scripts/*.sh
+
+      - name: Set version
+        id: set_version
+        run: |
+          if [ "${{ github.event_name }}" = "release" ]; then
+            echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+          else
+            echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
+          fi
+
       - name: Check version
         working-directory: .
-        run: ./.github/scripts/check_version.sh $(echo "${{ github.ref }}" | sed -e "s,^refs/tags/,,")
+        run: ./.github/scripts/check_version.sh ${{ env.VERSION }}
+
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
+
       - name: Build and Release
-        run: |
-          VERSION=${GITHUB_REF#refs/tags/}
-          ./gradlew build test -Pversion=$VERSION dokkaHtml publish --info
+        run: ./gradlew build test -Pversion=${{ env.VERSION }} dokkaHtml publish --info
+
       - name: Prepare Dokka doc locally
         working-directory: .
-        run: ./.github/scripts/prepare_dokkadoc.sh $(echo "${{ github.ref }}" | sed -e "s,^refs/tags/,,")
+        run: ./.github/scripts/prepare_dokkadoc.sh ${{ env.VERSION }}
+
+      # Generate artifacts
+      - name: Assemble JVM artifacts
+        run: ./gradlew jvmJar
+
+      - name: Assemble Android artifacts
+        run: ./gradlew androidReleaseAar androidDebugAar
+
+      - name: Assemble iOS artifacts
+        run: ./gradlew linkDebugFrameworkIosX64 linkDebugFrameworkIosArm64 linkDebugFrameworkIosSimulatorArm64
+
+      # Upload artifacts
+      - name: Upload JVM artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: jvm-artifacts
+          path: build/libs/*.jar
+
+      - name: Upload Android artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-artifacts
+          path: build/outputs/aar/*.aar
+
+      - name: Upload iOS artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ios-artifacts
+          path: |
+            build/bin/iosX64/debugFramework/keyplelessreader.framework
+            build/bin/iosArm64/debugFramework/keyplelessreader.framework
+            build/bin/iosSimulatorArm64/debugFramework/keyplelessreader.framework
+
+      - name: Upload documentation
+        uses: actions/upload-artifact@v4
+        with:
+          name: documentation
+          path: build/dokka
+
       - name: Deploy Dokka to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
