refactor: update package group and project naming conventions

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 title = Keyple Kotlin Multiplatform NFC Reader Library
 description = Keyple NFC Reader KMP Library - A Kotlin Multiplatform implementation enabling NFC card communications across Android, iOS and desktop platforms
-group = org.eclipse.keyple.keypleless.reader.nfcmobile
+group = org.eclipse.keyple
 version = 0.1.2
 
 kotlin.code.style=official
